[package]
name = "VideoLagFix"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-sidecar = "2.0.6"
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
image = { version = "0.25.6", features = ["webp", "png"], default-features = false}
image_hasher = "3.0.0"
rayon = "1.10.0"
mimalloc = "0.1.47"
regex = "1.11.1"
fast_image_resize = {version =  "5.2.0", features = ["image"] }

[profile.release]
opt-level = 3
debug = true