[package]
name = "VideoLagFix"
authors = ["RedstoneMedia"]
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-sidecar = "2.0.6"
image = { version = "0.25.6", features = ["webp", "png"], default-features = false}
image_hasher = "3.0.0"
mimalloc = "0.1.47"
regex = "1.11.1"
fast_image_resize = {version =  "5.2.0", features = ["image"] }
clap = { version = "4.5.41", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
incremental = true