[package]
name = "video_lag_fix"
authors = ["RedstoneMedia"]
version = "0.1.1"
edition = "2021"

[dependencies]
ffmpeg-sidecar = "2.2.0"
image = { version = "0.25", features = ["webp", "png"], default-features = false}
image_hasher = "3.0.0"
mimalloc = "0.1"
regex = "1.11"
fast_image_resize = {version =  "5.3", features = ["image"] }
clap = { version = "4.5", features = ["derive"] }
ort = { version = "2.0.0-rc.10" , features = ["download-binaries"]}
once_cell = "1.21"
fern = "0.7"
log = "0.4"
rand = "0.9.2"

[profile.release]
opt-level = 3
debug = true
incremental = true

[profile.test]
opt-level = 2